--- a/config.json
+++ b/config.json
@@ -1,7 +1,7 @@
 {
-	"token": "Nzg3NzczOTEzODA3MDYxMDEz.X9Z1oQ.nGJywcxm-8xHdTs12hJ70ScHjvw",
-	"prefix": "!",
-	"id": "785243091811827772",
-	"message": "message à envoyé by kasav"
+	"token": "Token du bot",
+	"prefix": "prefix",
+	"id": "Votre Identifiant",
+	"message": "Le Message à envoyée"
 	
 }
